--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.12.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-preload": "^0.6.0",
     "typewriter-effect": "^2.19.0",
     "use-sound": "^4.0.1"
   },
